fixed text alignment on main

--- a/asset/css/fonts.css
+++ b/asset/css/fonts.css
@@ -33,7 +33,7 @@ h1 {
 
 p {
   line-height: 1.8;
-  text-align: justify;
+  text-align: center;
   margin: 0rem 5rem;
 }
 
